<resources>
    <string name="app_name">Ailiv</string>
    <string name="username_text">Username</string>
    <string name="password_text">Password</string>

    <!--  String Text  -->
    <string name="welcome_text">Welcome,\n%s\n(%s, %s years old)</string>
    <string name="begin_text">Let\'s We Begin!</string>>
    <string name="age_text">age</string>
    <string name="entry_age_text">Enter your age</string>
    <string name="gender_text">Gender</string>
    <string name="male_text">Male</string>
    <string name="female_text">Female</string>
    <string name="login_text">Login</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="dashboard_text">Dashboard</string>
    <string name="no_data_text">No Data</string>
    <string name="entry_food_text">Please Entry Your Food</string>

    <!--  Image Content Description  -->
    <string name="brand_logo_image">Brand Logo</string>
    <string name="no_data_image">No Data Image</string>
    <string name="upload_image_button">Upload Image Button</string>
    <string name="title_activity_dashboard">DashboardActivity</string>

    <string name="pick_other_food">Pick Other Food</string>
    <string name="pick_image_button">Pick Image Button</string>
    <string name="logout_text">Logout</string>
    <string name="ailiv_project">Ailiv Project</string>
    <string name="no_account_text">Don\'t have an account ?</string>
    <string name="sign_up_text">Sign Up</string>
    <string name="register_an_account_text">Register an account</string>
    <string name="start_new_account_text">Start New Account!</string>
    <string name="warning_text">WARNING</string>
    <string name="notes_text">Notes: Hanya Bisa 5 Makanan (Nasi Goreng, Oatmeal, Rendang, Batagor, dan Spaghetti) dengan nama file Nasi_Goreng.jpeg, Oatmeal.jpeg, Rendang.jpeg, Batagor.jpeg, dan Spaghetti.jpeg</string>
    <string name="alert_eat_text">Anda sudah cukup makan hari ini</string>
    <string name="allow_eat_text">Anda boleh makan lagi</string>
    <string name="saran_makan_text">Saran Makan</string>
    <string name="suggestion_text">Kalori</string>
    <string name="suggestion_value">2100 </string>
    <string name="saran_makan">Saran Makan</string>

</resources>