<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient_diagon"
    tools:context=".ui.PickImageFragment">

    <TextView
        android:id="@+id/tv_dashboard"
        style="@style/Theme.Ailiv.TextFont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/dashboard_text"
        android:textSize="28sp"
        app:layout_constraintHorizontal_bias="0.55"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <ImageView
        android:id="@+id/iv_no_data"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_marginTop="80dp"
        android:contentDescription="@string/no_data_image"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/tv_no_data"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_dashboard"
        tools:srcCompat="@drawable/no_data" />

    <TextView
        android:id="@+id/tv_no_data"
        style="@style/Theme.Ailiv.TextFont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/no_data_text"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/iv_no_data"
        app:layout_constraintStart_toStartOf="@+id/iv_no_data"
        app:layout_constraintTop_toBottomOf="@+id/iv_no_data" />

    <TextView
        android:id="@+id/tv_entry_food"
        style="@style/Theme.Ailiv.TextFont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/entry_food_text"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_no_data" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_pick_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:backgroundTint="@color/primary_medium"
        android:clickable="true"
        android:contentDescription="@string/pick_image_button"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_upload_white" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/brand_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_welcome"
        style="@style/Theme.Ailiv.TextFont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        tools:text="@string/welcome_text" />

</androidx.constraintlayout.widget.ConstraintLayout>